dcc/yacc.output
State 301 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement
    7                    | declarator compound_statement

    8 declaration: declaration_specifiers init_declarator_list SEMICOLON

    9 declaration_specifiers: type_specifier
   10                       | storage_class_specifier
   11                       | type_qualifier
   12                       | type_specifier declaration_specifiers
   13                       | storage_class_specifier declaration_specifiers
   14                       | type_qualifier declaration_specifiers

   15 storage_class_specifier: AUTO_SYM
   16                        | STATIC_SYM
   17                        | TYPEDEF_SYM
   18                        | REGISTER_SYM
   19                        | EXTERN_SYM

   20 type_qualifier: CONST_SYM
   21               | VOLATILE_SYM

   22 init_declarator_list: init_declarator
   23                     | init_declarator_list COMMA init_declarator

   24 init_declarator: declarator
   25                | declarator ASSIGN initializer

   26 type_specifier: struct_specifier
   27               | enum_specifier
   28               | TYPE_IDENTIFIER

   29 struct_specifier: struct_or_union IDENTIFIER LR struct_declaration_list RR
   30                 | struct_or_union LR struct_declaration_list RR
   31                 | struct_or_union IDENTIFIER

   32 struct_or_union: STRUCT_SYM
   33                | UNION_SYM

   34 struct_declaration_list: struct_declaration
   35                        | struct_declaration_list struct_declaration

   36 struct_declaration: specifier_qualifier_list struct_declarator_list SEMICOLON

   37 specifier_qualifier_list: type_specifier
   38                         | type_qualifier
   39                         | type_specifier specifier_qualifier_list
   40                         | type_qualifier specifier_qualifier_list

   41 struct_declarator_list: struct_declarator
   42                       | struct_declarator_list COMMA struct_declarator

   43 struct_declarator: declarator
   44                  | COLON constant_expression
   45                  | declarator COLON constant_expression

   46 enum_specifier: ENUM_SYM IDENTIFIER LR enumerator_list RR
   47               | ENUM_SYM LR enumerator_list RR
   48               | ENUM_SYM IDENTIFIER

   49 enumerator_list: enumerator
   50                | enumerator_list COMMA enumerator

   51 enumerator: IDENTIFIER
   52           | IDENTIFIER ASSIGN expression

   53 declarator: pointer direct_declarator
   54           | direct_declarator

   55 pointer: STAR type_qualifier_list_opt
   56        | STAR type_qualifier_list_opt pointer

   57 type_qualifier_list_opt: /* empty */
   58                        | type_qualifier_list

   59 type_qualifier_list: type_qualifier
   60                    | type_qualifier_list type_qualifier

   61 direct_declarator: IDENTIFIER
   62                  | LP declarator RP
   63                  | direct_declarator LB constant_expression_opt RB
   64                  | direct_declarator LP parameter_type_list_opt RP

   65 constant_expression_opt: /* empty */
   66                        | constant_expression

   67 parameter_type_list_opt: /* empty */
   68                        | parameter_type_list

   69 parameter_type_list: parameter_list
   70                    | parameter_list COMMA DOTDOTDOT

   71 parameter_list: parameter_declaration
   72               | parameter_list COMMA parameter_declaration

   73 parameter_declaration: declaration_specifiers declarator
   74                      | declaration_specifiers abstract_declarator_opt

   75 abstract_declarator_opt: /* empty */
   76                        | abstract_declarator

   77 abstract_declarator: pointer
   78                    | direct_abstract_declarator
   79                    | pointer direct_abstract_declarator

   80 direct_abstract_declarator: LP abstract_declarator RP
   81                           | LB constant_expression_opt RB
   82                           | LP parameter_type_list_opt RP
   83                           | direct_abstract_declarator LB constant_expression_opt RB
   84                           | direct_abstract_declarator LP parameter_type_list_opt RP

   85 initializer: constant_expression
   86            | LR initializer_list RR

   87 initializer_list: initializer
   88                 | initializer_list COMMA initializer

   89 statement: labeled_statment
   90          | compound_statement
   91          | expression_statement
   92          | selection_statement
   93          | iteration_statement
   94          | jump_statement

   95 labeled_statment: CASE_SYM constant_expression COLON statement
   96                 | DEFAULT_SYM COLON statement
   97                 | IDENTIFIER COLON statement

   98 compound_statement: LR declaration_list statement_list RR

   99 declaration_list: /* empty */
  100                 | declaration_list declaration

  101 statement_list: /* empty */
  102               | statement_list statement

  103 expression_statement: SEMICOLON
  104                     | expression SEMICOLON

  105 selection_statement: IF_SYM LP expression RP statement
  106                    | IF_SYM LP expression RP statement ELSE_SYM statement
  107                    | SWITCH_SYM LP expression RP statement

  108 iteration_statement: WHILE_SYM LP expression RP statement
  109                    | DO_SYM statement WHILE_SYM LP expression RP SEMICOLON
  110                    | FOR_SYM LP expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP statement

  111 expression_opt: /* empty */
  112               | expression

  113 jump_statement: RETURN_SYM expression_opt SEMICOLON
  114               | CONTINUE_SYM SEMICOLON
  115               | BREAK_SYM SEMICOLON

  116 primary_expression: IDENTIFIER
  117                   | INTEGER_CONSTANT
  118                   | FLOAT_CONSTANT
  119                   | CHARACTER_CONSTANT
  120                   | STRING_LITERAL
  121                   | LP expression RP

  122 postfix_expression: primary_expression
  123                   | postfix_expression LB expression RB
  124                   | postfix_expression LP arg_expression_list_opt RP
  125                   | postfix_expression PERIOD IDENTIFIER
  126                   | postfix_expression ARROW IDENTIFIER
  127                   | postfix_expression PLUSPLUS
  128                   | postfix_expression MINUSMINUS

  129 arg_expression_list_opt: /* empty */
  130                        | arg_expression_list

  131 arg_expression_list: assignment_expression
  132                    | arg_expression_list COMMA assignment_expression

  133 unary_expression: postfix_expression
  134                 | PLUSPLUS unary_expression
  135                 | MINUSMINUS unary_expression
  136                 | AMP cast_expression
  137                 | STAR cast_expression
  138                 | EXCL cast_expression
  139                 | MINUS cast_expression
  140                 | TILDE cast_expression
  141                 | PLUS cast_expression
  142                 | SIZEOF_SYM unary_expression
  143                 | SIZEOF_SYM LP type_name RP

  144 cast_expression: unary_expression
  145                | LP type_name RP cast_expression

  146 type_name: declaration_specifiers
  147          | declaration_specifiers abstract_declarator

  148 multiplicative_expression: cast_expression
  149                          | multiplicative_expression STAR cast_expression
  150                          | multiplicative_expression SLACH cast_expression
  151                          | multiplicative_expression PERCENT cast_expression

  152 additive_expression: multiplicative_expression
  153                    | additive_expression PLUS multiplicative_expression
  154                    | additive_expression MINUS multiplicative_expression

  155 shift_expression: additive_expression
  156                 | shift_expression LSHIFT additive_expression
  157                 | shift_expression RSHIFT additive_expression

  158 relational_expression: shift_expression
  159                      | relational_expression LSS shift_expression
  160                      | relational_expression GTR shift_expression
  161                      | relational_expression LEQ shift_expression
  162                      | relational_expression GEQ shift_expression

  163 equality_expression: relational_expression
  164                    | equality_expression EQL relational_expression
  165                    | equality_expression NEQ relational_expression

  166 AND_expression: equality_expression
  167               | AND_expression AMP equality_expression

  168 exclusive_OR_expression: AND_expression
  169                        | exclusive_OR_expression XOR AND_expression

  170 inclusive_OR_expression: exclusive_OR_expression
  171                        | inclusive_OR_expression BAR exclusive_OR_expression

  172 logical_AND_expression: inclusive_OR_expression
  173                       | logical_AND_expression AMPAMP inclusive_OR_expression

  174 logical_OR_expression: logical_AND_expression
  175                      | logical_OR_expression BARBAR logical_AND_expression

  176 conditional_expression: logical_OR_expression
  177                       | logical_OR_expression QUEST expression COLON conditional_expression

  178 assignment_expression: conditional_expression
  179                      | unary_expression ASSIGN assignment_expression

  180 expression: assignment_expression

  181 constant_expression: expression


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO_SYM (258) 15
BREAK_SYM (259) 115
CASE_SYM (260) 95
CONTINUE_SYM (261) 114
DEFAULT_SYM (262) 96
DO_SYM (263) 109
ELSE_SYM (264) 106
ENUM_SYM (265) 46 47 48
FOR_SYM (266) 110
IF_SYM (267) 105 106
RETURN_SYM (268) 113
SIZEOF_SYM (269) 142 143
STATIC_SYM (270) 16
STRUCT_SYM (271) 32
SWITCH_SYM (272) 107
TYPEDEF_SYM (273) 17
UNION_SYM (274) 33
WHILE_SYM (275) 108 109
REGISTER_SYM (276) 18
EXTERN_SYM (277) 19
CONST_SYM (278) 20
VOLATILE_SYM (279) 21
PLUSPLUS (280) 127 134
MINUSMINUS (281) 128 135
ARROW (282) 126
LSS (283) 159
GTR (284) 160
LEQ (285) 161
GEQ (286) 162
EQL (287) 164
NEQ (288) 165
AMPAMP (289) 173
BARBAR (290) 175
DOTDOTDOT (291) 70
LP (292) 62 64 80 82 84 105 106 107 108 109 110 121 124 143 145
RP (293) 62 64 80 82 84 105 106 107 108 109 110 121 124 143 145
LB (294) 63 81 83 123
RB (295) 63 81 83 123
LR (296) 29 30 46 47 86 98
RR (297) 29 30 46 47 86 98
COLON (298) 44 45 95 96 97 177
PERIOD (299) 125
COMMA (300) 23 42 50 70 72 88 132
EXCL (301) 138
STAR (302) 55 56 137 149
SLACH (303) 150
PERCENT (304) 151
AMP (305) 136 167
SEMICOLON (306) 8 36 103 104 109 110 113 114 115
PLUS (307) 141 153
MINUS (308) 139 154
ASSIGN (309) 25 52 179
INTEGER_CONSTANT (310) 117
FLOAT_CONSTANT (311) 118
STRING_LITERAL (312) 120
CHARACTER_CONSTANT (313) 119
IDENTIFIER (314) 29 31 46 48 51 52 61 97 116 125 126
TYPE_IDENTIFIER (315) 28
QUEST (316) 177
XOR (317) 169
TILDE (318) 140
BAR (319) 171
LSHIFT (320) 156
RSHIFT (321) 157


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
program (68)
    on left: 1, on right: 0
translation_unit (69)
    on left: 2 3, on right: 1 3
external_declaration (70)
    on left: 4 5, on right: 2 3
function_definition (71)
    on left: 6 7, on right: 4
declaration (72)
    on left: 8, on right: 5 100
declaration_specifiers (73)
    on left: 9 10 11 12 13 14, on right: 6 8 12 13 14 73 74 146 147
storage_class_specifier (74)
    on left: 15 16 17 18 19, on right: 10 13
type_qualifier (75)
    on left: 20 21, on right: 11 14 38 40 59 60
init_declarator_list (76)
    on left: 22 23, on right: 8 23
init_declarator (77)
    on left: 24 25, on right: 22 23
type_specifier (78)
    on left: 26 27 28, on right: 9 12 37 39
struct_specifier (79)
    on left: 29 30 31, on right: 26
struct_or_union (80)
    on left: 32 33, on right: 29 30 31
struct_declaration_list (81)
    on left: 34 35, on right: 29 30 35
struct_declaration (82)
    on left: 36, on right: 34 35
specifier_qualifier_list (83)
    on left: 37 38 39 40, on right: 36 39 40
struct_declarator_list (84)
    on left: 41 42, on right: 36 42
struct_declarator (85)
    on left: 43 44 45, on right: 41 42
enum_specifier (86)
    on left: 46 47 48, on right: 27
enumerator_list (87)
    on left: 49 50, on right: 46 47 50
enumerator (88)
    on left: 51 52, on right: 49 50
declarator (89)
    on left: 53 54, on right: 6 7 24 25 43 45 62 73
pointer (90)
    on left: 55 56, on right: 53 56 77 79
type_qualifier_list_opt (91)
    on left: 57 58, on right: 55 56
type_qualifier_list (92)
    on left: 59 60, on right: 58 60
direct_declarator (93)
    on left: 61 62 63 64, on right: 53 54 63 64
constant_expression_opt (94)
    on left: 65 66, on right: 63 81 83
parameter_type_list_opt (95)
    on left: 67 68, on right: 64 82 84
parameter_type_list (96)
    on left: 69 70, on right: 68
parameter_list (97)
    on left: 71 72, on right: 69 70 72
parameter_declaration (98)
    on left: 73 74, on right: 71 72
abstract_declarator_opt (99)
    on left: 75 76, on right: 74
abstract_declarator (100)
    on left: 77 78 79, on right: 76 80 147
direct_abstract_declarator (101)
    on left: 80 81 82 83 84, on right: 78 79 83 84
initializer (102)
    on left: 85 86, on right: 25 87 88
initializer_list (103)
    on left: 87 88, on right: 86 88
statement (104)
    on left: 89 90 91 92 93 94, on right: 95 96 97 102 105 106 107
    108 109 110
labeled_statment (105)
    on left: 95 96 97, on right: 89
compound_statement (106)
    on left: 98, on right: 6 7 90
declaration_list (107)
    on left: 99 100, on right: 98 100
statement_list (108)
    on left: 101 102, on right: 98 102
expression_statement (109)
    on left: 103 104, on right: 91
selection_statement (110)
    on left: 105 106 107, on right: 92
iteration_statement (111)
    on left: 108 109 110, on right: 93
expression_opt (112)
    on left: 111 112, on right: 110 113
jump_statement (113)
    on left: 113 114 115, on right: 94
primary_expression (114)
    on left: 116 117 118 119 120 121, on right: 122
postfix_expression (115)
    on left: 122 123 124 125 126 127 128, on right: 123 124 125 126
    127 128 133
arg_expression_list_opt (116)
    on left: 129 130, on right: 124
arg_expression_list (117)
    on left: 131 132, on right: 130 132
unary_expression (118)
    on left: 133 134 135 136 137 138 139 140 141 142 143,
    on right: 134 135 142 144 179
cast_expression (119)
    on left: 144 145, on right: 136 137 138 139 140 141 145 148 149
    150 151
type_name (120)
    on left: 146 147, on right: 143 145
multiplicative_expression (121)
    on left: 148 149 150 151, on right: 149 150 151 152 153 154
additive_expression (122)
    on left: 152 153 154, on right: 153 154 155 156 157
shift_expression (123)
    on left: 155 156 157, on right: 156 157 158 159 160 161 162
relational_expression (124)
    on left: 158 159 160 161 162, on right: 159 160 161 162 163 164
    165
equality_expression (125)
    on left: 163 164 165, on right: 164 165 166 167
AND_expression (126)
    on left: 166 167, on right: 167 168 169
exclusive_OR_expression (127)
    on left: 168 169, on right: 169 170 171
inclusive_OR_expression (128)
    on left: 170 171, on right: 171 172 173
logical_AND_expression (129)
    on left: 172 173, on right: 173 174 175
logical_OR_expression (130)
    on left: 174 175, on right: 175 176 177
conditional_expression (131)
    on left: 176 177, on right: 177 178
assignment_expression (132)
    on left: 178 179, on right: 131 132 179 180
expression (133)
    on left: 180, on right: 52 104 105 106 107 108 109 112 121 123
    177 181
constant_expression (134)
    on left: 181, on right: 44 45 66 85 95


state 0

    0 $accept: . program $end

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    VOLATILE_SYM     shift, and go to state 10
    LP               shift, and go to state 11
    STAR             shift, and go to state 12
    IDENTIFIER       shift, and go to state 13
    TYPE_IDENTIFIER  shift, and go to state 14

    program                  go to state 15
    translation_unit         go to state 16
    external_declaration     go to state 17
    function_definition      go to state 18
    declaration              go to state 19
    declaration_specifiers   go to state 20
    storage_class_specifier  go to state 21
    type_qualifier           go to state 22
    type_specifier           go to state 23
    struct_specifier         go to state 24
    struct_or_union          go to state 25
    enum_specifier           go to state 26
    declarator               go to state 27
    pointer                  go to state 28
    direct_declarator        go to state 29


state 1

   15 storage_class_specifier: AUTO_SYM .

    $default  reduce using rule 15 (storage_class_specifier)


state 2

   46 enum_specifier: ENUM_SYM . IDENTIFIER LR enumerator_list RR
   47               | ENUM_SYM . LR enumerator_list RR
   48               | ENUM_SYM . IDENTIFIER

    LR          shift, and go to state 30
    IDENTIFIER  shift, and go to state 31


state 3

   16 storage_class_specifier: STATIC_SYM .

    $default  reduce using rule 16 (storage_class_specifier)


state 4

   32 struct_or_union: STRUCT_SYM .

    $default  reduce using rule 32 (struct_or_union)


state 5

   17 storage_class_specifier: TYPEDEF_SYM .

    $default  reduce using rule 17 (storage_class_specifier)


state 6

   33 struct_or_union: UNION_SYM .

    $default  reduce using rule 33 (struct_or_union)


state 7

   18 storage_class_specifier: REGISTER_SYM .

    $default  reduce using rule 18 (storage_class_specifier)


state 8

   19 storage_class_specifier: EXTERN_SYM .

    $default  reduce using rule 19 (storage_class_specifier)


state 9

   20 type_qualifier: CONST_SYM .

    $default  reduce using rule 20 (type_qualifier)


state 10

   21 type_qualifier: VOLATILE_SYM .

    $default  reduce using rule 21 (type_qualifier)


state 11

   62 direct_declarator: LP . declarator RP

    LP          shift, and go to state 11
    STAR        shift, and go to state 12
    IDENTIFIER  shift, and go to state 13

    declarator         go to state 32
    pointer            go to state 28
    direct_declarator  go to state 29


state 12

   55 pointer: STAR . type_qualifier_list_opt
   56        | STAR . type_qualifier_list_opt pointer

    CONST_SYM     shift, and go to state 9
    VOLATILE_SYM  shift, and go to state 10

    $default  reduce using rule 57 (type_qualifier_list_opt)

    type_qualifier           go to state 33
    type_qualifier_list_opt  go to state 34
    type_qualifier_list      go to state 35


state 13

   61 direct_declarator: IDENTIFIER .

    $default  reduce using rule 61 (direct_declarator)


state 14

   28 type_specifier: TYPE_IDENTIFIER .

    $default  reduce using rule 28 (type_specifier)


state 15

    0 $accept: program . $end

    $end  shift, and go to state 36


state 16

    1 program: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    VOLATILE_SYM     shift, and go to state 10
    LP               shift, and go to state 11
    STAR             shift, and go to state 12
    IDENTIFIER       shift, and go to state 13
    TYPE_IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 1 (program)

    external_declaration     go to state 37
    function_definition      go to state 18
    declaration              go to state 19
    declaration_specifiers   go to state 20
    storage_class_specifier  go to state 21
    type_qualifier           go to state 22
    type_specifier           go to state 23
    struct_specifier         go to state 24
    struct_or_union          go to state 25
    enum_specifier           go to state 26
    declarator               go to state 27
    pointer                  go to state 28
    direct_declarator        go to state 29


state 17

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


state 18

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


state 19

    5 external_declaration: declaration .

    $default  reduce using rule 5 (external_declaration)


state 20

    6 function_definition: declaration_specifiers . declarator compound_statement
    8 declaration: declaration_specifiers . init_declarator_list SEMICOLON

    LP          shift, and go to state 11
    STAR        shift, and go to state 12
    IDENTIFIER  shift, and go to state 13

    init_declarator_list  go to state 38
    init_declarator       go to state 39
    declarator            go to state 40
    pointer               go to state 28
    direct_declarator     go to state 29


state 21

   10 declaration_specifiers: storage_class_specifier .
   13                       | storage_class_specifier . declaration_specifiers

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    VOLATILE_SYM     shift, and go to state 10
    TYPE_IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 10 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 21
    type_qualifier           go to state 22
    type_specifier           go to state 23
    struct_specifier         go to state 24
    struct_or_union          go to state 25
    enum_specifier           go to state 26


state 22

   11 declaration_specifiers: type_qualifier .
   14                       | type_qualifier . declaration_specifiers

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    VOLATILE_SYM     shift, and go to state 10
    TYPE_IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 11 (declaration_specifiers)

    declaration_specifiers   go to state 42
    storage_class_specifier  go to state 21
    type_qualifier           go to state 22
    type_specifier           go to state 23
    struct_specifier         go to state 24
    struct_or_union          go to state 25
    enum_specifier           go to state 26


state 23

    9 declaration_specifiers: type_specifier .
   12                       | type_specifier . declaration_specifiers

    AUTO_SYM         shift, and go to state 1
    ENUM_SYM         shift, and go to state 2
    STATIC_SYM       shift, and go to state 3
    STRUCT_SYM       shift, and go to state 4
    TYPEDEF_SYM      shift, and go to state 5
    UNION_SYM        shift, and go to state 6
    REGISTER_SYM     shift, and go to state 7
    EXTERN_SYM       shift, and go to state 8
    CONST_SYM        shift, and go to state 9
    VOLATILE_SYM     shift, and go to state 10
    TYPE_IDENTIFIER  shift, and go to state 14

    $default  reduce using rule 9 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 21
    type_qualifier           go to state 22
    type_specifier           go to state 23
    struct_specifier         go to state 24
    struct_or_union          go to state 25
    enum_specifier           go to state 26


state 24

   26 type_specifier: struct_specifier .

    $default  reduce using rule 26 (type_specifier)


state 25

   29 struct_specifier: struct_or_union . IDENTIFIER LR struct_declaration_list RR
   30                 | struct_or_union . LR struct_declaration_list RR
   31                 | struct_or_union . IDENTIFIER

    LR          shift, and go to state 44
    IDENTIFIER  shift, and go to state 45


state 26

   27 type_specifier: enum_specifier .

    $default  reduce using rule 27 (type_specifier)


state 27

    7 function_definition: declarator . compound_statement

    LR  shift, and go to state 46

    compound_statement  go to state 47


state 28

   53 declarator: pointer . direct_declarator

    LP          shift, and go to state 11
    IDENTIFIER  shift, and go to state 13

    direct_declarator  go to state 48


state 29

   54 declarator: direct_declarator .
   63 direct_declarator: direct_declarator . LB constant_expression_opt RB
   64                  | direct_declarator . LP parameter_type_list_opt RP

    LP  shift, and go to state 49
    LB  shift, and go to state 50

    $default  reduce using rule 54 (declarator)


state 30

   47 enum_specifier: ENUM_SYM LR . enumerator_list RR

    IDENTIFIER  shift, and go to state 51

    enumerator_list  go to state 52
    enumerator       go to state 53


state 31

   46 enum_specifier: ENUM_SYM IDENTIFIER . LR enumerator_list RR
   48               | ENUM_SYM IDENTIFIER .

    LR  shift, and go to state 54

    $default  reduce using rule 48 (enum_specifier)


state 32

   62 direct_declarator: LP declarator . RP

    RP  shift, and go to state 55


state 33

   59 type_qualifier_list: type_qualifier .

    $default  reduce using rule 59 (type_qualifier_list)


state 34

   55 pointer: STAR type_qualifier_list_opt .
   56        | STAR type_qualifier_list_opt . pointer

    STAR  shift, and go to state 12

    $default  reduce using rule 55 (pointer)

    pointer  go to state 56


state 35

   58 type_qualifier_list_opt: type_qualifier_list .
   60 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST_SYM     shift, and go to state 9
    VOLATILE_SYM  shift, and go to state 10

    $default  reduce using rule 58 (type_qualifier_list_opt)

    type_qualifier  go to state 57


state 36

    0 $accept: program $end .

    $default  accept


state 37

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


state 38

    8 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   23 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA      shift, and go to state 58
    SEMICOLON  shift, and go to state 59


state 39

   22 init_declarator_list: init_declarator .

    $default  reduce using rule 22 (init_declarator_list)


state 40
